Covid-19 to COVID-19

--- a/_notebooks/2020-03-28-covid19-ca.ipynb
+++ b/_notebooks/2020-03-28-covid19-ca.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Covid-19 en Centroamérica\n",
+    "# COVID-19 en Centroamérica\n",
     "> Dashboard\n",
     "\n",
     "- toc: false\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,19 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "> Last updated on 2020-03-31 12:25 UTC"
+       "> Last updated on 2020-03-31 13:23 UTC"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        " {'gt': 10, 'bz': 0, 'hn': 3, 'sv': 0, 'ni': 0, 'cr': 4, 'pa': 4})"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -283,10 +283,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1113c0b10>"
+       "<IPython.lib.display.IFrame at 0x1113bce90>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,122 +346,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div style=\"display: flex; justify-content: center;\"><style  type=\"text/css\" >\n",
-       "    #T_ab80b470_734a_11ea_94c7_dca90476276d th {\n",
+       "    #T_c6b23d10_7352_11ea_94c7_dca90476276d th {\n",
        "          font-size: 22px;\n",
-       "    }    #T_ab80b470_734a_11ea_94c7_dca90476276d td {\n",
+       "    }    #T_c6b23d10_7352_11ea_94c7_dca90476276d td {\n",
        "          font-size: 18px;\n",
-       "    }    #T_ab80b470_734a_11ea_94c7_dca90476276drow0_col1 {\n",
+       "    }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow0_col1 {\n",
        "            background-color:  #fff5eb;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow0_col2 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow0_col2 {\n",
        "            background-color:  #fff5f0;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow0_col3 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow0_col3 {\n",
        "            background-color:  #f7fcf5;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow1_col1 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow1_col1 {\n",
        "            background-color:  #fdba7f;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow1_col2 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow1_col2 {\n",
        "            background-color:  #fee7dc;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow1_col3 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow1_col3 {\n",
        "            background-color:  #98d594;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow2_col1 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow2_col1 {\n",
        "            background-color:  #fff2e5;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow2_col2 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow2_col2 {\n",
        "            background-color:  #fff5f0;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow2_col3 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow2_col3 {\n",
        "            background-color:  #f7fcf5;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow3_col1 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow3_col1 {\n",
        "            background-color:  #fff1e4;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow3_col2 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow3_col2 {\n",
        "            background-color:  #ffeee7;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow3_col3 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow3_col3 {\n",
        "            background-color:  #00441b;\n",
        "            color:  #f1f1f1;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow4_col1 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow4_col1 {\n",
        "            background-color:  #fee4ca;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow4_col2 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow4_col2 {\n",
        "            background-color:  #fcae92;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow4_col3 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow4_col3 {\n",
        "            background-color:  #b8e3b2;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow5_col1 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow5_col1 {\n",
        "            background-color:  #fff5eb;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow5_col2 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow5_col2 {\n",
        "            background-color:  #ffeee7;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow5_col3 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow5_col3 {\n",
        "            background-color:  #f7fcf5;\n",
        "            color:  #000000;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow6_col1 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow6_col1 {\n",
        "            background-color:  #7f2704;\n",
        "            color:  #f1f1f1;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow6_col2 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow6_col2 {\n",
        "            background-color:  #67000d;\n",
        "            color:  #f1f1f1;\n",
-       "        }    #T_ab80b470_734a_11ea_94c7_dca90476276drow6_col3 {\n",
+       "        }    #T_c6b23d10_7352_11ea_94c7_dca90476276drow6_col3 {\n",
        "            background-color:  #98d594;\n",
        "            color:  #000000;\n",
-       "        }</style><table id=\"T_ab80b470_734a_11ea_94c7_dca90476276d\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >País</th>        <th class=\"col_heading level0 col1\" >Diagnosticados</th>        <th class=\"col_heading level0 col2\" >Muertos</th>        <th class=\"col_heading level0 col3\" >Curados</th>    </tr></thead><tbody>\n",
+       "        }</style><table id=\"T_c6b23d10_7352_11ea_94c7_dca90476276d\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >País</th>        <th class=\"col_heading level0 col1\" >Diagnosticados</th>        <th class=\"col_heading level0 col2\" >Muertos</th>        <th class=\"col_heading level0 col3\" >Curados</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow0_col0\" class=\"data row0 col0\" >Belize 🇧🇿</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow0_col1\" class=\"data row0 col1\" >3</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow0_col2\" class=\"data row0 col2\" >0</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow0_col3\" class=\"data row0 col3\" >0</td>\n",
+       "                                <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow0_col0\" class=\"data row0 col0\" >Belize 🇧🇿</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow0_col1\" class=\"data row0 col1\" >3</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow0_col2\" class=\"data row0 col2\" >0</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow0_col3\" class=\"data row0 col3\" >0</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow1_col0\" class=\"data row1 col0\" >Costa Rica 🇨🇷</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow1_col1\" class=\"data row1 col1\" >330</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow1_col2\" class=\"data row1 col2\" >2</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow1_col3\" class=\"data row1 col3\" >4</td>\n",
+       "                                <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow1_col0\" class=\"data row1 col0\" >Costa Rica 🇨🇷</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow1_col1\" class=\"data row1 col1\" >330</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow1_col2\" class=\"data row1 col2\" >2</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow1_col3\" class=\"data row1 col3\" >4</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow2_col0\" class=\"data row2 col0\" >El Salvador 🇸🇻</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow2_col1\" class=\"data row2 col1\" >30</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow2_col2\" class=\"data row2 col2\" >0</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow2_col3\" class=\"data row2 col3\" >0</td>\n",
+       "                                <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow2_col0\" class=\"data row2 col0\" >El Salvador 🇸🇻</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow2_col1\" class=\"data row2 col1\" >30</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow2_col2\" class=\"data row2 col2\" >0</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow2_col3\" class=\"data row2 col3\" >0</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow3_col0\" class=\"data row3 col0\" >Guatemala 🇬🇹</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow3_col1\" class=\"data row3 col1\" >36</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow3_col2\" class=\"data row3 col2\" >1</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow3_col3\" class=\"data row3 col3\" >10</td>\n",
+       "                                <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow3_col0\" class=\"data row3 col0\" >Guatemala 🇬🇹</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow3_col1\" class=\"data row3 col1\" >36</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow3_col2\" class=\"data row3 col2\" >1</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow3_col3\" class=\"data row3 col3\" >10</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow4_col0\" class=\"data row4 col0\" >Honduras 🇭🇳</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow4_col1\" class=\"data row4 col1\" >139</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow4_col2\" class=\"data row4 col2\" >7</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow4_col3\" class=\"data row4 col3\" >3</td>\n",
+       "                                <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow4_col0\" class=\"data row4 col0\" >Honduras 🇭🇳</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow4_col1\" class=\"data row4 col1\" >139</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow4_col2\" class=\"data row4 col2\" >7</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow4_col3\" class=\"data row4 col3\" >3</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow5_col0\" class=\"data row5 col0\" >Nicaragua 🇳🇮</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow5_col1\" class=\"data row5 col1\" >4</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow5_col2\" class=\"data row5 col2\" >1</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow5_col3\" class=\"data row5 col3\" >0</td>\n",
+       "                                <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow5_col0\" class=\"data row5 col0\" >Nicaragua 🇳🇮</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow5_col1\" class=\"data row5 col1\" >4</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow5_col2\" class=\"data row5 col2\" >1</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow5_col3\" class=\"data row5 col3\" >0</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow6_col0\" class=\"data row6 col0\" >Panama 🇵🇦</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow6_col1\" class=\"data row6 col1\" >989</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow6_col2\" class=\"data row6 col2\" >24</td>\n",
-       "                        <td id=\"T_ab80b470_734a_11ea_94c7_dca90476276drow6_col3\" class=\"data row6 col3\" >4</td>\n",
+       "                                <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow6_col0\" class=\"data row6 col0\" >Panama 🇵🇦</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow6_col1\" class=\"data row6 col1\" >989</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow6_col2\" class=\"data row6 col2\" >24</td>\n",
+       "                        <td id=\"T_c6b23d10_7352_11ea_94c7_dca90476276drow6_col3\" class=\"data row6 col3\" >4</td>\n",
        "            </tr>\n",
        "    </tbody></table></div>"
       ],
@@ -499,7 +499,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Data Sources\n",
+    "### Fuentes\n",
     "- 2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins CSSE [https://github.com/CSSEGISandData/COVID-19]\n"
    ]
   },
