adjusting sizes to make it a bit more mobile friendly.

--- a/_notebooks/2020-03-28-covid19-ca.ipynb
+++ b/_notebooks/2020-03-28-covid19-ca.ipynb
@@ -225,14 +225,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "#hide\n",
     "\n",
     "map_center_lat, map_center_long = (12.5, -87)\n",
-    "zoom = 6"
+    "zoom = 5"
    ]
   },
   {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -630,8 +630,8 @@
       "text/html": [
        "\n",
        "        <iframe\n",
-       "            width=\"800\"\n",
-       "            height=\"600\"\n",
+       "            width=\"600\"\n",
+       "            height=\"450\"\n",
        "            src=\"../maps/covid19-ca-map.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
@@ -639,17 +639,17 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x11df1edd0>"
+       "<IPython.lib.display.IFrame at 0x11da023d0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# hide_input\n",
-    "IFrame('../maps/covid19-ca-map.html', width=800, height=600)"
+    "IFrame('../maps/covid19-ca-map.html', height=450, width=600)"
    ]
   },
   {
