adjusting sizes to make it a bit more mobile friendly.

--- a/_notebooks/2020-03-28-covid19-ca.ipynb
+++ b/_notebooks/2020-03-28-covid19-ca.ipynb
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -630,8 +630,8 @@
       "text/html": [
        "\n",
        "        <iframe\n",
-       "            width=\"600\"\n",
-       "            height=\"450\"\n",
+       "            width=\"500\"\n",
+       "            height=\"400\"\n",
        "            src=\"../maps/covid19-ca-map.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
@@ -639,17 +639,17 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x11da023d0>"
+       "<IPython.lib.display.IFrame at 0x120bdf710>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# hide_input\n",
-    "IFrame('../maps/covid19-ca-map.html', height=450, width=600)"
+    "IFrame('../maps/covid19-ca-map.html', height=400, width=500)"
    ]
   },
   {
