adjusting sizes to make it a bit more mobile friendly.

--- a/_notebooks/2020-03-28-covid19-ca.ipynb
+++ b/_notebooks/2020-03-28-covid19-ca.ipynb
@@ -36,19 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "> Last updated on 2020-03-31 21:13 UTC"
+       "> Última actualización: 2020-03-31 21:53 UTC"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
     "from datetime import datetime\n",
     "utc_now = datetime.utcnow()\n",
     "\n",
-    "Markdown('> Last updated on {} UTC'.format(utc_now.strftime(\"%Y-%m-%d %H:%M\")))"
+    "Markdown('> Última actualización: {} UTC'.format(utc_now.strftime(\"%Y-%m-%d %H:%M\")))"
    ]
   },
   {
