add source and author.

--- a/_notebooks/2020-03-28-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-28-covid-19-ie.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "24                      68  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "(2910, 54, 5)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,19 +265,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "> Last updated on 2020-03-31 13:23 UTC"
+       "> Last updated on 2020-03-31 22:20 UTC"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "38                      68  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "33                      68  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,17 +493,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-b6469b76b99a4c9f9b12b517776ee174\"></div>\n",
+       "<div id=\"altair-viz-27ba590b0d2a42a286b32ba279196ef3\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-b6469b76b99a4c9f9b12b517776ee174\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-27ba590b0d2a42a286b32ba279196ef3\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -551,7 +551,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,17 +574,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-50d637f351d140649175b5a8c22f373b\"></div>\n",
+       "<div id=\"altair-viz-bdaf18df53c34631813abe047ad75e77\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-50d637f351d140649175b5a8c22f373b\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-bdaf18df53c34631813abe047ad75e77\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -632,7 +632,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,17 +662,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-cb05680f735b4fe291cbba8443a0bd7f\"></div>\n",
+       "<div id=\"altair-viz-dcdf23a28d2d44b0bbbceedeab83dac0\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-cb05680f735b4fe291cbba8443a0bd7f\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-dcdf23a28d2d44b0bbbceedeab83dac0\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -720,7 +720,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,17 +763,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-281ca72a138747f6b4e1732b008224fd\"></div>\n",
+       "<div id=\"altair-viz-a23357fdd82a479d8ac01825e2f00eff\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-281ca72a138747f6b4e1732b008224fd\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-a23357fdd82a479d8ac01825e2f00eff\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -821,7 +821,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,17 +870,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-db0cc06e54ab4edb8af8721b80a7ed56\"></div>\n",
+       "<div id=\"altair-viz-c3c8cb71fab5401ab36d5c36168abe64\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-db0cc06e54ab4edb8af8721b80a7ed56\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-c3c8cb71fab5401ab36d5c36168abe64\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -928,7 +928,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,17 +951,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-29e8832dd7124b708d5d82d1237c2573\"></div>\n",
+       "<div id=\"altair-viz-90af93a1a39a4480ab058fcd861e01ce\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-29e8832dd7124b708d5d82d1237c2573\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-90af93a1a39a4480ab058fcd861e01ce\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -1009,7 +1009,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,17 +1037,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-0058dc3ad1e449c389008f81c74e24e9\"></div>\n",
+       "<div id=\"altair-viz-e3d96071d7094b60a4875b6f62b3c64b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-0058dc3ad1e449c389008f81c74e24e9\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-e3d96071d7094b60a4875b6f62b3c64b\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -1095,7 +1095,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,17 +1123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-32d4344d008943c19c81334b52120405\"></div>\n",
+       "<div id=\"altair-viz-7912252a89424098a5a06b1d3ed1f6db\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-32d4344d008943c19c81334b52120405\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-7912252a89424098a5a06b1d3ed1f6db\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -1181,7 +1181,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1204,13 @@
     "---\n",
     "### Data Sources\n",
     "- Government of Ireland [https://www.gov.ie/]\n",
-    "- 2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins CSSE [https://github.com/CSSEGISandData/COVID-19]\n"
+    "- 2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins CSSE [https://github.com/CSSEGISandData/COVID-19]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<div align=\"right\">Notebook and graphics by Dr. Ernesto Diaz-Aviles, <a href=\"https://twitter.com/vedax\" target=\"_blank\">@vedax</a><br/><a href=\"https://libreai.com\" target=\"_blank\">Libre AI</a><br/><a href=\"https://creativecommons.org/licenses/by-sa/4.0/\" target=\"_blank\">CC BY-SA 4.0</a>, 2020</div>\n",
+    "\n",
+    "---"
    ]
   },
   {
