--- a/_notebooks/2020-03-28-covid19-ca.ipynb
+++ b/_notebooks/2020-03-28-covid19-ca.ipynb
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 463,
    "metadata": {},
    "outputs": [
     {
@@ -1298,12 +1298,14 @@
        "[267 rows x 14 columns]"
       ]
      },
-     "execution_count": 457,
+     "execution_count": 463,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#hide \n",
+    "\n",
     "cdr_ca[cdr_ca[\"deaths\"]>0]"
    ]
   },
